# syntax-parser-skeleton

./: .gitignore  README.rst  pyproject.toml
src/syntax_parser_skeleton/: __init__.py  baseobjects.py  example.py  visualisation.py
src/syntax_parser_skeleton/baseobjekts/: __init__.py  components.py  root.py
src/syntax_parser_skeleton/derivatives/: simpleregex.py  singleregex.py
src/syntax_parser_skeleton/visualisation/: __init__.py
